# NodeSpireTD

./: .clang-format  .gitattributes  .gitignore  .luarc.json  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: build.yaml
assets/blender/: TowerDefense_Lobby.blend  archer_hut.blend  archer_hut_arrow.blend  base.blend  goblin1.blend  grassy_map.blend  portal.blend
assets/levels/grassy/: grassy_map.glb  level.lua
assets/lua/meta/: engine_globals.lua
assets/models/: goblin1.enemy.lua
assets/models/base/: base.glb  portal.glb
assets/models/enemy/: goblin1.enemy.lua  goblin1.glb
assets/models/lobby/: lobby.glb
assets/models/towers/: archer_hut.glb  archer_hut.tower.lua  archer_hut_arrow.glb
assets/scenes/: Lobby.lua  MainMenu.lua  Options.lua  PlayLevel.level.lua  PlayLevel.lua  PlayLevelWaves.lua  SplashScreen.lua
assets/shaders/: highlight.frag  highlight.frag.spv  highlight.vert  highlight.vert.spv  mesh.frag  mesh.frag.spv  mesh.vert  mesh.vert.spv
config/: settings.json
data/talent_trees/: archer_tower.json
src/: AppController.cpp  AppController.hpp  AppSettings.hpp  Application.cpp  Application.h  CMakeLists.txt  IAchievementService.hpp  ISaveSystem.hpp  ImGuiLayer.cpp  ImGuiLayer.hpp  LocalAchievementService.cpp  LocalAchievementService.hpp  LocalFileSaveSystem.cpp  LocalFileSaveSystem.hpp  LuaStateBootstrap.cpp  LuaStateBootstrap.hpp  PlatformRuntime.cpp  PlatformRuntime.hpp  SceneContext.hpp  SceneEvent.hpp  Scenes.cpp  Scenes.hpp  SettingsManager.cpp  SettingsManager.hpp  VulkanContext.cpp  VulkanContext.hpp  main.cpp
src/ecs/: Components.h  Events.h
src/renderer/: ImGuiLayer.cpp  ImGuiLayer.h  VulkanContext.cpp  VulkanContext.h  vma_impl.cpp
src/scenes/: GameScene.cpp  GameScene.hpp  IScene.hpp  LevelSelectionScene.cpp  LevelSelectionScene.hpp  LobbyScene.cpp  LobbyScene.hpp  MainMenuScene.cpp  MainMenuScene.hpp  OptionsScene.cpp  OptionsScene.hpp  PlayLevelCameraController.cpp  PlayLevelCameraController.hpp  PlayLevelCombatController.cpp  PlayLevelCombatController.hpp  PlayLevelPickingController.cpp  PlayLevelPickingController.hpp  PlayLevelRouteController.cpp  PlayLevelRouteController.hpp  PlayLevelScene.cpp  PlayLevelScene.hpp  PlayLevelState.hpp  PlayLevelTowerPlacementController.cpp  PlayLevelTowerPlacementController.hpp  PlayLevelWaveController.cpp  PlayLevelWaveController.hpp  SceneSharedState.cpp  SceneSharedState.hpp  SplashScreen.cpp  SplashScreen.hpp
src/serialization/: TalentTreeLoader.cpp  TalentTreeLoader.h
src/systems/: TowerStatsSystem.cpp  TowerStatsSystem.h
src/talent/: RespecManager.cpp  RespecManager.h  StatModifier.h  TalentGraph.cpp  TalentGraph.h  TalentNode.h
src/ui/: UIManager.cpp  UIManager.h
src/utility/: AnimatedEntityInstanceSet.hpp  TemplateAnimationDebugInfo.hpp  TemplateAnimator.cpp  TemplateAnimator.hpp  VulkanTexture.cpp  VulkanTexture.hpp  WorldAssetLoader.cpp  WorldAssetLoader.hpp  WorldGeometryTypes.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tools/: gen_lua_metadata.py
